--- a/_posts/工作随笔/2017-09-21-KMP字符串匹配算法.md
+++ b/_posts/工作随笔/2017-09-21-KMP字符串匹配算法.md
@@ -50,3 +50,35 @@ public static int[] getNextArray(char[] ms){
 		return next;
 	}
 ```
+这里cn一直指向可能最长相同字符串的最后一个字母。左老师这段代码相当精髓。
+
+#### KMP遍历方法：
+求出next数组之后，就可以根据next数组的值，在待匹配字符串上进行快速匹配。和暴力字符串匹配方法（String.contains()就是用的暴力匹配）类似，只不过运用到了next数组的值，跳过了一些匹配环节。这里最关键的一个问题是，为什么在跳过的那部分匹配中不可能找到相匹配的字符串。具体证明可以用下面的图说明，证明运用了反证法（有很多问题正面证明有困难的时候，往往反证法就会比较有用了）。<br/>
+![为什么跳过next]({{ '/styles/images/KMP.jpg' | prepend: site.baseurl }})<br/>
+上图是一次匹配过程，目的是在上面字符串中找到下面字符串所在的位置（如果有的话），第一次匹配的时候，在A，B处发现匹配失败，也就是说A、B前面的字符串都是相同的。KMP算法会直接向右移动A处next值的长度进行下一次匹配，现在来证明这个的合理性。假设向右移动x字符串长度的位置（小于A处next值），根据上图的推理得出矛盾。
+
+具体代码如下：
+```
+public int getIndexOf(String s,String m){
+		if(s==null || m==null || m.length()<1 || s.length()<m.length()){
+			return -1;
+		}
+		char[] ss=s.toCharArray();
+		char[] ms=m.toCharArray();
+		int si=0;
+		int mi=0;
+		int[] next=getNextArray(ms);
+		while(si<ss.length&&mi<ms.length){
+			if(ss[si]==ms[mi]){
+				si++;
+				mi++;
+			}else if(next[mi]==-1){
+				si++;
+			}else{
+				mi=next[mi];
+			}
+		}
+		return mi==ms.length? si-mi:-1;
+	}
+```
+*（特别感谢 左程云 老师，他讲的算法特别透彻）*
