--- a/_posts/工作随笔/2017-09-19-如何查看Java对象占用JVM内存大小.md
+++ b/_posts/工作随笔/2017-09-19-如何查看Java对象占用JVM内存大小.md
@@ -14,6 +14,8 @@ tag: JVM
 ### 转换成字节类型 
 之前遇到要查看缓存大小，找了很多方法都不是很合适，从同事那里得知一个很好、很准确的方法。分享如下：
 
-> private List<Map<String,Object>> paramList=new ArrayList<Map<String,Object>>();<br />
-> paramList=sqlMap.queryForList("*****.*****"); //从数据库读取缓存数据。<br />
-> logger.info("paramList大小="+Arrays.toString(paramList.toArray()).getBytes().length);//打印占用字节数。<br />
+```java
+private List<Map<String,Object>> paramList=new ArrayList<Map<String,Object>>();
+paramList=sqlMap.queryForList("*****.*****"); //从数据库读取缓存数据。
+logger.info("paramList大小="+Arrays.toString(paramList.toArray()).getBytes().length);//打印占用字节数。
+```
