--- a/_posts/工作随笔/2017-09-19-如何查看Java对象占用JVM内存大小.md
+++ b/_posts/工作随笔/2017-09-19-如何查看Java对象占用JVM内存大小.md
@@ -12,7 +12,7 @@ tag: JVM
 
 -------
 ### 转换成字节类型 
-之前遇到要查看缓存大小，找了很多方法都不是很合适，从同事那里得知一个很好、很准确的方法。分享如下：
+之前遇到要查看缓存大小，找了很多方法都不是很合适，从同事那里得知一个很好、很准确的方法。现分享如下：
 
 ```java
 private List<Map<String,Object>> paramList=new ArrayList<Map<String,Object>>();
