--- a/_posts/工作随笔/2017-09-21-KMP字符串匹配算法.md
+++ b/_posts/工作随笔/2017-09-21-KMP字符串匹配算法.md
@@ -16,7 +16,7 @@ tag: 字符串匹配
 
 
 ### KMP算法
-KMP算法俗称“看毛片”算法，通过计算next[] 数组的方法加速匹配过程。
+KMP算法通过计算next[] 数组的方法加速匹配过程。
 
 #### next[] 数组：
 首先要明白几个概念，字符串中的字符的前置字符串（如果有），后置字符串。很容易理解，前置字符串就是这个字符前面的一段字符串、后置字符串就是这个字符后面的一串字符串。<br/>
